--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     <input type="text" id="search" placeholder="Search for a word..." onkeyup="searchWords()">
 
     <div class="word-list">
-        <div class="word-item"><a href="word/#1">Womp womp</a></div>
-        <div class="word-item"><a href="word/#2">Gyat</a></div>
-        <div class="word-item"><a href="word/#3">Aura</a></div>
-        <div class="word-item"><a href="word/#4">Sigma</a></div>
-        <div class="word-item"><a href="word/#5">Ohio</a></div>
-        <div class="word-item"><a href="word/#6">Rizz</a></div>
-        <div class="word-item"><a href="word/#7">Fanum tax</a></div>
-        <div class="word-item"><a href="word/#8">Skibidi toilet</a></div>
-        <div class="word-item"><a href="word/#9">Backrooms</a></div>
-        <div class="word-item"><a href="word/#10">Goat</a></div>
+        <div class="word-item"><a href="#1">Womp womp</a></div>
+        <div class="word-item"><a href="#2">Gyat</a></div>
+        <div class="word-item"><a href="#3">Aura</a></div>
+        <div class="word-item"><a href="#4">Sigma</a></div>
+        <div class="word-item"><a href="#5">Ohio</a></div>
+        <div class="word-item"><a href="#6">Rizz</a></div>
+        <div class="word-item"><a href="#7">Fanum tax</a></div>
+        <div class="word-item"><a href="#8">Skibidi toilet</a></div>
+        <div class="word-item"><a href="#9">Backrooms</a></div>
+        <div class="word-item"><a href="#10">Goat</a></div>
     </div>
 
     <!-- Definitions section -->
